@@ -25,8 +25,7 @@ import org.gradle.api.JavaVersion
 import org.gradle.api.Named
 import org.gradle.api.Plugin
 import org.gradle.api.Project
-import org.gradle.api.artifacts.ComponentMetadataContext
-import org.gradle.api.artifacts.ComponentMetadataRule
+import org.gradle.api.plugins.JavaPluginConvention
 import org.gradle.api.tasks.bundling.Jar
 import org.gradle.api.tasks.compile.AbstractCompile
 import org.gradle.api.tasks.compile.CompileOptions
@@ -37,24 +36,52 @@ import org.gradle.build.ClasspathManifest
 import org.gradle.gradlebuild.BuildEnvironment
 import org.gradle.gradlebuild.BuildEnvironment.agentNum
 import org.gradle.gradlebuild.java.AvailableJavaInstallations
-import org.gradle.internal.jvm.Jvm
 import org.gradle.kotlin.dsl.*
+import org.gradle.plugins.ide.idea.IdeaPlugin
+import org.gradle.plugins.ide.idea.model.IdeaModel
 import org.gradle.process.CommandLineArgumentProvider
-import testLibraries
 import testLibrary
+import java.util.concurrent.Callable
 import java.util.jar.Attributes
+import kotlin.reflect.full.declaredFunctions
 
 
-enum class ModuleType(val source: JavaVersion, val target: JavaVersion, val requiredCompiler: JavaVersion) {
-    UNDEFINED(JavaVersion.VERSION_1_1, JavaVersion.VERSION_1_1, JavaVersion.VERSION_1_1),
-    ENTRY_POINT(JavaVersion.VERSION_1_6, JavaVersion.VERSION_1_6, JavaVersion.VERSION_1_6),
-    WORKER(JavaVersion.VERSION_1_6, JavaVersion.VERSION_1_6, JavaVersion.VERSION_1_6),
-    CORE(JavaVersion.VERSION_1_7, JavaVersion.VERSION_1_7, JavaVersion.VERSION_1_7),
-    PLUGIN(JavaVersion.VERSION_1_7, JavaVersion.VERSION_1_7, JavaVersion.VERSION_1_7),
-    INTERNAL(JavaVersion.VERSION_1_7, JavaVersion.VERSION_1_7, JavaVersion.VERSION_1_7),
-    REQUIRES_JAVA_8(JavaVersion.VERSION_1_8, JavaVersion.VERSION_1_8, JavaVersion.VERSION_1_8),
-    REQUIRES_JAVA_9_COMPILER(JavaVersion.VERSION_1_6, JavaVersion.VERSION_1_6, JavaVersion.VERSION_1_9);
+enum class ModuleType(val compatibility: JavaVersion = JavaVersion.VERSION_1_8) {
+
+    /**
+     * the first modules loaded during startup that support an older Java version
+     * to print a proper error message when running on an old JDK
+     */
+    STARTUP(JavaVersion.VERSION_1_6),
+
+    /**
+     * modules that may run as part of a worker process that supports an older JDK version
+     */
+    WORKER(JavaVersion.VERSION_1_6),
+
+    /**
+     * modules that end up in the distribution in addition to STARTUP and WORKER
+     */
+    CORE,
+
+    /**
+     * modules that are published as plugins on the portal
+     */
+    PORTAL_PLUGINS,
+
+    /**
+     * internal modules, like test fixtures, that are not part of the distribution
+     */
+    INTERNAL,
 }
+
+
+/**
+ * By default, we run an extra build step ("GRADLE_RERUNNER") which runs all test classes failed in the previous build step ("GRADLE_RUNNER").
+ * However, if previous test failures are too many (>10), this is probably not caused by flakiness.
+ * In this case, we simply skip the GRADLE_RERUNNER step.
+ */
+const val tooManyTestFailuresThreshold = 10
 
 
 class UnitTestAndCompilePlugin : Plugin<Project> {
@@ -66,62 +93,71 @@ class UnitTestAndCompilePlugin : Plugin<Project> {
         base.archivesBaseName = "gradle-${name.replace(Regex("\\p{Upper}")) { "-${it.value.toLowerCase()}" }}"
         addDependencies()
         addGeneratedResources(extension)
-        configureCompile(extension)
+        configureCompile()
         configureJarTasks()
         configureTests()
     }
 
     private
-    fun Project.configureCompile(extension: UnitTestAndCompileExtension) {
+    fun Project.configureCompile() {
         afterEvaluate {
             val availableJavaInstallations = rootProject.the<AvailableJavaInstallations>()
 
             tasks.withType<JavaCompile>().configureEach {
-                options.isIncremental = true
-                configureCompileTask(this, options, availableJavaInstallations, extension.moduleType.requiredCompiler)
+                configureCompileTask(this, options, availableJavaInstallations)
             }
             tasks.withType<GroovyCompile>().configureEach {
                 groovyOptions.encoding = "utf-8"
-                configureCompileTask(this, options, availableJavaInstallations, extension.moduleType.requiredCompiler)
+                configureCompileTask(this, options, availableJavaInstallations)
             }
         }
         addCompileAllTask()
     }
 
     private
-    fun configureCompileTask(compileTask: AbstractCompile, options: CompileOptions, availableJavaInstallations: AvailableJavaInstallations, requiredCompilerVersion: JavaVersion) {
+    fun configureCompileTask(compileTask: AbstractCompile, options: CompileOptions, availableJavaInstallations: AvailableJavaInstallations) {
         options.isFork = true
         options.encoding = "utf-8"
+        options.isIncremental = true
         options.compilerArgs = mutableListOf("-Xlint:-options", "-Xlint:-path")
-        val compilerJdkVersion = maxOf(requiredCompilerVersion, JavaVersion.VERSION_1_7)
-        val jdkForCompilation = availableJavaInstallations.jdkForCompilation(compilerJdkVersion)
+        val jdkForCompilation = availableJavaInstallations.javaInstallationForCompilation
         if (!jdkForCompilation.current) {
             options.forkOptions.javaHome = jdkForCompilation.javaHome
         }
-        compileTask.inputs.property("javaInstallation", when (compileTask) {
-            is JavaCompile -> jdkForCompilation
-            else -> availableJavaInstallations.currentJavaInstallation
-        }.displayName)
+        compileTask.inputs.property("javaInstallation", Callable {
+            when (compileTask) {
+                is JavaCompile -> jdkForCompilation
+                else -> availableJavaInstallations.currentJavaInstallation
+            }.vendorAndMajorVersion
+        })
     }
 
     private
     fun Project.addGeneratedResources(gradlebuildJava: UnitTestAndCompileExtension) {
-        val classpathManifest = tasks.register("classpathManifest", ClasspathManifest::class.java)
+        val classpathManifest = tasks.register("classpathManifest", ClasspathManifest::class)
         java.sourceSets["main"].output.dir(mapOf("builtBy" to classpathManifest), gradlebuildJava.generatedResourcesDir)
+        // Remove this IDEA import workaround once we completely migrated to the native IDEA import
+        // See: https://github.com/gradle/gradle-private/issues/1675
+        plugins.withType<IdeaPlugin> {
+            configure<IdeaModel> {
+                module {
+                    resourceDirs = resourceDirs + gradlebuildJava.generatedResourcesDir
+                    testResourceDirs = testResourceDirs + gradlebuildJava.generatedTestResourcesDir
+                }
+            }
+        }
     }
 
     private
     fun Project.addDependencies() {
         dependencies {
-            val testCompile = configurations.getByName("testCompile")
-            testCompile(library("junit"))
-            testCompile(library("groovy"))
-            testCompile(testLibrary("spock"))
-            testLibraries("jmock").forEach { testCompile(it) }
-
-            components {
-                withModule("org.spockframework:spock-core", SpockCoreRule::class.java)
-            }
+            val testImplementation = configurations.getByName("testImplementation")
+            val testRuntimeOnly = configurations.getByName("testRuntimeOnly")
+            testImplementation(library("junit"))
+            testImplementation(library("groovy"))
+            testImplementation(testLibrary("spock"))
+            testRuntimeOnly(testLibrary("bytebuddy"))
+            testRuntimeOnly(library("objenesis"))
         }
     }
 
@@ -138,28 +174,41 @@ class UnitTestAndCompilePlugin : Plugin<Project> {
     private
     fun Project.configureJarTasks() {
         tasks.withType<Jar>().configureEach {
-            version = rootProject.extra["baseVersion"] as String
+            val baseVersion: String by rootProject.extra
+            archiveVersion.set(baseVersion)
             manifest.attributes(mapOf(
                 Attributes.Name.IMPLEMENTATION_TITLE.toString() to "Gradle",
-                Attributes.Name.IMPLEMENTATION_VERSION.toString() to version))
+                Attributes.Name.IMPLEMENTATION_VERSION.toString() to baseVersion))
         }
     }
 
     private
-    fun Project.configureTests() {
-        val javaInstallationForTest = rootProject.availableJavaInstallations.javaInstallationForTest
+    fun Test.configureJvmForTest() {
+        val javaInstallationForTest = project.rootProject.availableJavaInstallations.javaInstallationForTest
+        jvmArgumentProviders.add(createCiEnvironmentProvider(this))
+        executable = javaInstallationForTest.jvm.javaExecutable.absolutePath
+        environment["JAVA_HOME"] = javaInstallationForTest.javaHome.absolutePath
+        if (javaInstallationForTest.javaVersion.isJava7) {
+            // enable class unloading
+            jvmArgs("-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled")
+        }
+        if (javaInstallationForTest.javaVersion.isJava9Compatible) {
+            // allow embedded executer to modify environment variables
+            jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
+            // allow embedded executer to inject legacy types into the system classloader
+            jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+        }
+        // Includes JVM vendor and major version
+        inputs.property("javaInstallation", Callable { javaInstallationForTest.vendorAndMajorVersion })
+    }
 
+    private
+    fun Project.configureTests() {
         tasks.withType<Test>().configureEach {
             maxParallelForks = project.maxParallelForks
-            jvmArgumentProviders.add(createCiEnvironmentProvider(this))
-            executable = Jvm.forHome(javaInstallationForTest.javaHome).javaExecutable.absolutePath
-            environment["JAVA_HOME"] = javaInstallationForTest.javaHome.absolutePath
-            if (javaInstallationForTest.javaVersion.isJava7) {
-                // enable class unloading
-                jvmArgs("-XX:+UseConcMarkSweepGC", "-XX:+CMSClassUnloadingEnabled")
-            }
-            // Includes JVM vendor and major version
-            inputs.property("javaInstallation", javaInstallationForTest.displayName)
+
+            configureJvmForTest()
+
             doFirst {
                 if (BuildEnvironment.isCiServer) {
                     logger.lifecycle("maxParallelForks for '$path' is $maxParallelForks")
@@ -175,7 +224,7 @@ class UnitTestAndCompilePlugin : Plugin<Project> {
 
             override fun asArguments(): Iterable<String> {
                 return if (BuildEnvironment.isCiServer) {
-                    mapOf(
+                    getRepoMirrorSystemProperties() + mapOf(
                         "org.gradle.test.maxParallelForks" to test.maxParallelForks,
                         "org.gradle.ci.agentCount" to 2,
                         "org.gradle.ci.agentNum" to agentNum
@@ -188,38 +237,63 @@ class UnitTestAndCompilePlugin : Plugin<Project> {
             }
         }
     }
+
+    private
+    fun getRepoMirrorSystemProperties(): List<String> = collectMirrorUrls().map {
+        "-Dorg.gradle.integtest.mirrors.${it.key}=${it.value}"
+    }
+
+    private
+    fun collectMirrorUrls(): Map<String, String> =
+    // expected env var format: repo1_id:repo1_url,repo2_id:repo2_url,...
+        System.getenv("REPO_MIRROR_URLS")?.split(',')?.associate { nameToUrl ->
+            val (name, url) = nameToUrl.split(':', limit = 2)
+            name to url
+        } ?: emptyMap()
 }
 
 
 open class UnitTestAndCompileExtension(val project: Project) {
     val generatedResourcesDir = project.file("${project.buildDir}/generated-resources/main")
     val generatedTestResourcesDir = project.file("${project.buildDir}/generated-resources/test")
-    var moduleType: ModuleType = ModuleType.UNDEFINED
+    var moduleType: ModuleType? = null
         set(value) {
-            field = value
-            project.java.targetCompatibility = moduleType.target
-            project.java.sourceCompatibility = moduleType.source
+            field = value!!
+            project.addPlatformDependency(value)
+            project.java.targetCompatibility = value.compatibility
+            project.java.sourceCompatibility = value.compatibility
+            project.java.disableAutoTargetJvmGradle53()
         }
 
     init {
         project.afterEvaluate {
-            if (this@UnitTestAndCompileExtension.moduleType == ModuleType.UNDEFINED) {
+            if (this@UnitTestAndCompileExtension.moduleType == null) {
                 throw InvalidUserDataException("gradlebuild.moduletype must be set for project $project")
+            }
+        }
+    }
+
+    private
+    fun Project.addPlatformDependency(moduleType: ModuleType) {
+        val platformProject = ":distributionsDependencies"
+        dependencies {
+            if (moduleType == ModuleType.PORTAL_PLUGINS) {
+                "compileOnly"(platform(project(platformProject)))
+                "testImplementation"(platform(project(platformProject)))
+            } else {
+                "implementation"(platform(project(platformProject)))
+                pluginManager.withPlugin("java-test-fixtures") {
+                    "testFixturesImplementation"(platform(project(platformProject)))
+                }
             }
         }
     }
 }
 
 
-open class SpockCoreRule : ComponentMetadataRule {
-    override fun execute(context: ComponentMetadataContext) {
-        context.details.allVariants {
-            withDependencyConstraints {
-                filter { it.group == "org.objenesis" }.forEach {
-                    it.version { prefer("1.2") }
-                    it.because("1.2 is required by Gradle and part of the distribution")
-                }
-            }
-        }
+fun JavaPluginConvention.disableAutoTargetJvmGradle53() {
+    val function = JavaPluginConvention::class.declaredFunctions.find { it.name == "disableAutoTargetJvm" }
+    function?.also {
+        it.call(this)
     }
 }
