@@ -52,11 +52,12 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
         """
 
         expect:
-        executer.withArguments('help', '--continuous', '-i').run().getExecutedTasks().contains(':help')
+        executer.withArguments('help', '--continuous', '-i').run().assertTasksExecuted(':help')
     }
 
     //IBM JDK adds a bunch of environment variables that make the foreground daemon not match
-    @Requires(TestPrecondition.NOT_JDK_IBM)
+    //Java 9 and above needs --add-opens to make environment variable mutation work
+    @Requires([TestPrecondition.NOT_JDK_IBM, TestPrecondition.JDK8_OR_EARLIER])
     def "should capture basic data when a foreground daemon runs multiple builds"() {
         given:
         buildFile << """
@@ -74,8 +75,8 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
         captureResults << executer.withTasks('capture2').run()
 
         then:
-        captureResults[0].getExecutedTasks().contains(':capture1')
-        captureResults[1].getExecutedTasks().contains(':capture2')
+        captureResults[0].assertTaskExecuted(':capture1')
+        captureResults[1].assertTaskExecuted(':capture2')
 
         cleanup:
         daemon?.abort()
@@ -163,7 +164,7 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
         result = executer.withArgument('--no-daemon').withTasks('capture').run()
 
         then:
-        executedTasks.contains(':capture')
+        executed(':capture')
         outputContains(SingleUseDaemonClient.MESSAGE)
 
         and:
